--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="apple-touch-icon" href="/8bitme.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>myspace-portfolio</title>
+    <title>MyPortfolio - Jessica Calderon</title>
   </head>
   <body>
     <div id="root"></div>
