--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/png" href="/favicon.png" />
     <link rel="apple-touch-icon" href="/8bitme.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MyPortfolio - Jessica Calderon</title>
+    <title>Jessica Calderon's Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
