--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <link rel="apple-touch-icon" href="/8bitme.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jessica Calderon's Portfolio</title>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-2T5KC8FCQ0"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-2T5KC8FCQ0');
+    </script>
   </head>
   <body>
     <div id="root"></div>
